--- a/Section 1: React Basics (1–15)/1. What is React & why use it.md
+++ b/Section 1: React Basics (1–15)/1. What is React & why use it.md
@@ -1,3 +1,5 @@
+### Topic 1: What is React & why use it
+
 React is a popular JavaScript library used for building user interfaces, especially single-page applications. Created by Facebook, React helps developers build complex UI by breaking it down into smaller, reusable components. Unlike traditional web apps that reload the entire page when data changes, React updates only the parts of the UI that need to change, making apps faster and smoother.
 
 One key reason to use React is its component-based architecture. Components are like building blocks — each handles its own structure, styling, and logic. This makes code easier to manage, test, and reuse across projects. React also uses a special syntax called JSX, which allows writing HTML-like code inside JavaScript, making the UI code more intuitive.
